--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,336 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.logo {
+  max-width: 500px;
+  align-self: center;
+}
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1c1c1f;
+  width: 100%;
+  height: 40px;
+  margin-top: 10px;
+  margin-bottom: 35px;
+}
+
+.navbar-dropdown{
+  display: none;
+}
+
+.navbar li {
+  display: inline;
+  padding: 15px;
+
+}
+
+.navbar a {
+  text-decoration: none;
+  color: rgb(216, 216, 216);
+  justify-items: center;
+  font-weight: 600;
+}
+
+.navbar a:hover {
+  color: white;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 0px;
+  width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+  text-decoration: none;
+}
+
+.grid-container a {
+  text-decoration: none;
+}
+
+.article {
+  border-bottom: 1px solid #1c1c1f;
+  margin-bottom: 40px;
+}
+
+.news-header {
+  margin-bottom: 25px;
+}
+
+.news-headline {
+  font-size: 18px;
+  font-weight: 600;
+  color: black;
+  text-decoration: none;
+}
+
+.news-date {
+  color: grey;
+}
+
+.buttons{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    margin-left: auto;
+    width: 98%;
+    margin-bottom: 20px;
+
+}
+
+.nextButton, .prevButton {
+  background-color: white;
+  padding: 5px;
+  width: 120px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.nextButton{
+  grid-column: 2;
+  grid-row: 5;
+  position: relative;
+  top: 60%;
+}
+.prevButton{
+  grid-column: 1;
+  grid-row: 5;
+  position: relative;
+  top: 60%;
+}
+
+.news {
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 5;
+  width: 90%;
+}
+
+.reviews {
+  grid-column: 3 / span 3;
+  grid-row: 1 / span 5;
+  text-align: center;
+  border-left: solid #1c1c1f 0.2px;
+  border-right: solid #1c1c1f 0.2px;
+}
+
+.record-stores{
+  grid-column: 6 / span 2;
+  grid-row: 1 / span 5;
+}
+
+.reviews-header{
+  margin-bottom: 25px;
+}
+
+.reviews-item {
+  position: relative; /* Ensure relative positioning for the grid container */
+  margin-bottom: 20px;
+}
+
+.image-container {
+  position: relative; /* Ensure relative positioning for each image container */
+}
+
+.artist,
+.album, .reviewed {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+  width: 100%;
+  padding: 0 10px;
+  box-sizing: border-box;
+  z-index: 1;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.artist{
+  top: 30%;
+}
+
+.album{
+  top: 36%;
+}
+
+.reviewed{
+  top: 65%;
+  font-size: 20px;
+}
+
+.grey{
+  color: rgb(179, 168, 168);
+  font-style: italic;
+}
+
+.reviews-image{
+  transition: filter 0.3s ease; 
+}
+
+.reviews-image:hover {
+  filter: brightness(40%); /* Darken the image on hover */
+}
+
+.store-header{
+  margin-bottom: 25px;
+}
+
+.store-name{
+  font-size: 20px;
+}
+
+.store-location{
+  font-size: 17px;
+  color: #303035;
+}
+
+.record-stores{
+  width: 80%;
+  margin-left: 25px;
+}
+
+.store-bio{
+  font-size: 17px;
+  line-height: 1.2;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #1c1c1f;
+}
+
+.newsletter{
+  grid-column: 6 / span 2;
+  grid-row: 3 / span 2;
+  text-align: center;
+  padding: 10px;
+  width: 90%;
+}
+
+.form-info{
+  color: #56565c;
+  margin-top: 15px;
+}
+
+.email-input{
+  text-align: center;
+  margin-top: 15px;
+  width: 90%;
+  height: 40px;
+  background-color: rgb(235, 231, 231);
+  border: solid .5px rgb(192, 189, 189);
+}
+
+.submit{
+  margin-top: 15px;
+  width: 90%;
+  height: 40px;
+  font-weight: bold;
+  background-color: #303035;
+  color: white;
+  border: none;
+}
+
+@media (max-width: 1400px) {
+  .grid-container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
+  .record-stores{
+    width: 100%;
+    margin-left: 0;
+  }
+  .news{
+    width: 100%;
+  }
+}
+
+@media (max-width: 1400px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 0px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .newsletter{
+    display: none;
+  }
+  .record-stores{
+    display: none;
+  }
+}
+
+@media (max-width: 985px) {
+  .grid-container {
+
+    grid-column-gap: 0px;
+
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 0;
+  }
+  .newsletter{
+    display: none;
+  }
+  .record-stores{
+    display: none;
+  }
+}
+@media (max-width: 883px) {
+  .grid-container {
+    display: block;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .news, .nextButton, .prevButton{
+    display: none;
+  }
+
+  .reviews{
+    border: none;
+  }
+
+  .navbar{
+    display: none;
+  }
+
+  .navbar-dropdown {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1c1c1f;
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    margin-bottom: 35px;
+  }
+
+
+}
+
+@media (max-width: 500px) {
+  *{
+    width: 100%;
+  }
 }
